tests/local/invalid/invalid-ty.wast
(assert_invalid
  (module
;;; TOOLle
  (func
(;0;) (type 0)
  )
  )
  "type index out of bounds")
